--- a/pom.xml
+++ b/pom.xml
@@ -80,10 +80,8 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-core</artifactId>
-            <version>0.20.2</version>
-            <optional>true</optional>
-            <scope>provided</scope>
+            <artifactId>hadoop-client</artifactId>
+            <version>2.2.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.guava</groupId>
